cards para comprar/alugar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="offcanvas-body">
-                        <!-- justify-content-lg-end move os itens para a direita apenas no desktop -->
+
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item ">
                                 <a class="nav-link medium-color" aria-current="page" href="#">Início</a>
@@ -45,8 +45,10 @@
                                     Produtos
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="#">Para Alugar</a></li>
-                                    <li><a class="dropdown-item medium-color" href="#">Para Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Para
+                                            Alugar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para
+                                            Comprar</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -61,7 +63,7 @@
             </div>
         </nav>
     </header>
-    <section class="home-message soft-background pt-3 pb-3">
+    <section class="soft-background pt-3 pb-3">
         <p class="text-center">Seja Bem-vindo à D'Maria Decorações!
             <br>
             <br>
@@ -70,70 +72,91 @@
         </p>
     </section>
     <main class="light-background padding-container pt-4">
-        <h4>Para Comprar</h4>
-
-        <section class="products d-flex">
 
 
+        <section class="products-preview mb-5">
+            <div class="d-flex justify-content-between">
+                <h4>Para Comprar</h4>
+                <a href="/pages/comprarProdutos.html" class="btn">Ver mais ></a>
+            </div>
 
-            <div class="card dmaria-card" >
-                <img src="./images/product_images/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="buy-product card">
-                <div class="card-body">
-                    <p class="card-text">
-                        Pacote de Colher Descartável marca TAL 50 unidades
-                    </p>
-                    <p class="fw-bold"> R$ 50,00 </p>
-                    <button class="btn bg-primary">Expandir</button>
+            <div class="products d-flex">
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card dmaria-card" >
-                <img src="./images/product_images/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="buy-product card">
-                <div class="card-body">
-                    <p class="card-text">
-                        Pacote de Colher Descartável marca TAL 50 unidades
-                    </p>
-                    <p class="fw-bold"> R$ 50,00 </p>
-                    <button class="btn bg-primary">Expandir</button>
-                </div>
+        </section>
+
+        <section class="products-preview mb-5">
+            <div class="d-flex justify-content-between">
+                <h4>Para Alugar</h4>
+                <a href="/pages/alugarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
+            <div class="products d-flex">
 
-            <div class="card dmaria-card" >
-                <img src="./images/product_images/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="buy-product card">
-                <div class="card-body">
-                    <p class="card-text">
-                        Pacote de Colher Descartável marca TAL 50 unidades
-                    </p>
-                    <p class="fw-bold"> R$ 50,00 </p>
-                    <button class="btn bg-primary">Expandir</button>
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 150,00 </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card dmaria-card" >
-                <img src="./images/product_images/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="buy-product card">
-                <div class="card-body">
-                    <p class="card-text">
-                        Pacote de Colher Descartável marca TAL 50 unidades
-                    </p>
-                    <p class="fw-bold"> R$ 50,00 </p>
-                    <button class="btn bg-primary">Expandir</button>
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card dmaria-card" >
-                <img src="./images/product_images/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="buy-product card">
-                <div class="card-body">
-                    <p class="card-text">
-                        Pacote de Colher Descartável marca TAL 50 unidades
-                    </p>
-                    <p class="fw-bold"> R$ 50,00 </p>
-                    <button class="btn bg-primary">Expandir</button>
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/bobbie_goods_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
                 </div>
             </div>
 
