--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
+    <script src="https://kit.fontawesome.com/b624667e59.js" crossorigin="anonymous"></script> <!-- font awesome -->
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="d-flex justify-content-between padding-container light-background">
         <!-- RECORTAR AS LATERAIS DA LOGO PRA HEADER FICAR CORRETA -->
         <img src="./images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
@@ -37,18 +41,22 @@
 
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item ">
-                                <a class="nav-link medium-color" aria-current="page" href="#">Início</a>
+                                <a class="nav-link medium-color" aria-current="page" href="">Início</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle medium-color" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    Produtos
+                                    Serviços
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Para
-                                            Alugar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Bolo
+                                            Fake</a></li>
+                                    <li><a class="dropdown-item medium-color"
+                                            href="/pages/decoracao.html">Decorações</a></li>
                                     <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para
                                             Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Pegue e
+                                            Monte</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -63,17 +71,26 @@
             </div>
         </nav>
     </header>
-    <section class="soft-background pt-3 pb-3">
-        <p class="text-center">Seja Bem-vindo à D'Maria Decorações!
+
+    <!-- AVISO -->
+    <section class="padding-container text-center soft-background pt-3 pb-3">
+        <p>Seja Bem-vindo à D'Maria Decorações!
             <br>
             <br>
             Além de alugar kits e decorações, agora
             você pode comprar produtos para sua festa!
         </p>
+        <p>Deseja pedir um orçamento? Nos chame no Whatsapp!</p>
+        <button class="btn text-white px-md-4 request-button">
+            <i class="fa-brands fa-whatsapp"></i>
+            <p>Faça seu pedido</p>
+        </button>
     </section>
-    <main class="light-background padding-container pt-4">
 
+    <!-- MAIN -->
+    <main class="light-background padding-container pt-4 pb-4">
 
+        <!-- PARA COMPRAR -->
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Para Comprar</h4>
@@ -118,9 +135,55 @@
 
         </section>
 
+        <!-- PEGUE E MONTE -->
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
-                <h4>Para Alugar</h4>
+                <h4>Pegue e Monte</h4>
+                <a href="/pages/alugarProdutos.html" class="btn">Ver mais ></a>
+            </div>
+
+            <div class="products d-flex">
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/pegue_e_monte/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 150,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/pegue_e_monte/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/alugar/pegue_e_monte/bobbie_goods_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- BOLO FAKE -->
+        <section class="products-preview mb-5">
+            <div class="d-flex justify-content-between">
+                <h4>Bolos Fake</h4>
                 <a href="/pages/alugarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
@@ -165,9 +228,16 @@
     </main>
 
 
+    <footer class="medium-background" style="min-height: 3rem">
+        
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
