--- a/pages/alugarProdutos.html
+++ b/pages/alugarProdutos.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
-    <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
-    <!-- imagem na página do navegador-->
-    <link rel="stylesheet" href="/css/style.css"> <!-- css próprio -->
+    <link rel="shortcut icon" href="../images/dmarialogo-removebg.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!-- booststrap -->
+
 
     <script src="https://kit.fontawesome.com/b624667e59.js" crossorigin="anonymous"></script> <!-- font awesome -->
-
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="d-flex justify-content-between padding-container light-background">
         <!-- RECORTAR AS LATERAIS DA LOGO PRA HEADER FICAR CORRETA -->
-        <img src="/images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
+        <img src="../images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
         <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
         <nav class="navbar navbar-expand-lg">
@@ -47,12 +47,17 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle medium-color" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    Produtos
+                                    Serviços
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="">Para
-                                            Alugar</a></li>
-                                    <li><a class="dropdown-item medium-color" href="./pages/comprarProdutos.html">Para Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Bolo
+                                            Fake</a></li>
+                                    <li><a class="dropdown-item medium-color"
+                                            href="/pages/decoracao.html">Decorações</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para
+                                            Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Pegue e
+                                            Monte</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -68,11 +73,14 @@
         </nav>
     </header>
 
-    <section class="padding-container text-center soft-background pt-4 pb-4">
-        <h4 class="text-danger mb-5">ATENÇÃO!
+    <!-- AVISO -->
+    <section class="padding-container text-center soft-background pt-3 pb-3">
+        <p>TEXTO PARA DIZER QUE TEM
             <br>
-            Todas os itens desta página, são pedidos por encomenda.
-        </h4>
+            <br>
+            PEGUE E MONTE E BOLO FAKE, BOLO FAKE DÁ PRA PERSONALIZAR
+        </p>
+        <p>Deseja alugar algo fora do catálogo? Fale conosco!</p>
         <button class="btn text-white px-md-4 request-button">
             <i class="fa-brands fa-whatsapp"></i>
             <p>Faça seu pedido</p>
@@ -80,20 +88,67 @@
     </section>
 
 
+    <!-- MAIN -->
+    <main class="light-background padding-container pt-4 pb-4">
+
+        <!-- PEGUE E MONTE -->
+        <section class="products-preview mb-5">
+            <div class="d-flex justify-content-between">
+                <h4>Pegue e Monte</h4>
+            </div>
+
+            <div class="products d-flex">
+
+                <div class="card dmaria-card buy-product">
+                    <img src="../images/alugar/" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+
+                <div class="card dmaria-card buy-product">
+                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card card-img">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pacote de Colher Descartável marca TAL 50 unidades
+                        </p>
+                        <p class="fw-bold"> R$ 50,00 </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="medium-background" style="height: 3rem">
 
 
+    </footer>
 
-
-
-
-
-
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
