imagens - kits pegue e monte adicionados

--- a/pages/alugarProdutos.html
+++ b/pages/alugarProdutos.html
@@ -90,45 +90,61 @@
 
     <!-- MAIN -->
     <main class="light-background padding-container pt-4 pb-4">
-
+        <div class="d-flex justify-content-between">
+            <!-- DROPDOWN -->
+            <select class="fs-4 fw-semibold mb-3 light-background ">
+                <option selected class="fw-semibold py-2">Pegue e Monte</option>
+                <option class="fw-semibold py-2">Bolo Fake</option>
+            </select>
+        </div>
         <!-- PEGUE E MONTE -->
         <section class="products-preview mb-5">
-            <div class="d-flex justify-content-between">
-                <h4>Pegue e Monte</h4>
-            </div>
+            
 
             <div class="products d-flex">
 
                 <div class="card dmaria-card buy-product">
-                    <img src="../images/alugar/" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/barbie_mini_kit.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte | CowBoy
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <button class="btn btn-primary ">Expandir</button>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                        class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Pegue e Monte | Moana
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <button class="btn btn-primary ">Expandir</button>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/bobbie_goods_mini_kit.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte | Bobbie Goods
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <button class="btn btn-primary ">Expandir</button>
+                        </div>
                     </div>
                 </div>
             </div>
