--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
@@ -112,7 +112,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
@@ -123,7 +123,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
@@ -146,7 +146,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/alugar/pegue_e_monte/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
@@ -157,7 +157,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/alugar/pegue_e_monte/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
@@ -191,10 +191,10 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/alugar/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte CowBoy 
                         </p>
                         <p class="fw-bold"> R$ 150,00 </p>
                     </div>
@@ -202,7 +202,7 @@
 
                 <div class="card dmaria-card buy-product">
                     <img src="./images/alugar/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card card-img">
+                        class="card-img">
                     <div class="card-body">
                         <p class="card-text">
                             Pacote de Colher Descartável marca TAL 50 unidades
