produtos adicionados à página de aluguel

--- a/pages/comprarProdutos.html
+++ b/pages/comprarProdutos.html
@@ -48,10 +48,10 @@
                                     Serviços
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Bolo Fake</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/decoracao.html">Decorações</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para Comprar</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Pegue e Monte</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./alugarProdutos.html?category=bolo">Bolo Fake</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./decoracao.html">Decorações</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./comprarProdutos.html">Para Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./alugarProdutos.html?category=monte">Pegue e Monte</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
