--- a/pages/decoracao.html
+++ b/pages/decoracao.html
@@ -48,10 +48,10 @@
                                     Serviços
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Bolo Fake</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/decoracao.html">Decorações</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para Comprar</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Pegue e Monte</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./alugarProdutos.html?category=bolo">Bolo Fake</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./decoracao.html">Decorações</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./comprarProdutos.html">Para Comprar</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./alugarProdutos.html?category=monte">Pegue e Monte</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -67,13 +67,12 @@
         </nav>
     </header>
     <section class="padding-container text-center soft-background pt-3 pb-3">
-        <p>Seja Bem-vindo à D'Maria Decorações!
+        <p>Aqui estão as decorações que já fizemos
             <br>
             <br>
-            Além de alugar kits e decorações, agora
-            você pode comprar produtos para sua festa!
+            Montamos decorações completas, com painéis, balões, arcos, tapetes e muito mais.
         </p>
-        <p>Deseja pedir um orçamento? Nos chame no Whatsapp!</p>
+        <p class="fs-5">Você pede, nós montamos!</p>
         <button class="btn text-white px-md-4 request-button">
             <i class="fa-brands fa-whatsapp"></i>
             <p>Faça seu pedido</p>
