--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
                                     Serviços
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu light-background">
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Bolo
+                                    <li><a class="dropdown-item medium-color"
+                                            href="./pages/alugarProdutos.html?category=bolo">Bolo
                                             Fake</a></li>
                                     <li><a class="dropdown-item medium-color"
-                                            href="/pages/decoracao.html">Decorações</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para
+                                            href="./pages/decoracao.html">Decorações</a></li>
+                                    <li><a class="dropdown-item medium-color" href="./pages/comprarProdutos.html">Para
                                             Comprar</a></li>
-                                    <li><a class="dropdown-item medium-color" href="/pages/alugarProdutos.html">Pegue e
+                                    <li><a class="dropdown-item medium-color"
+                                            href="./pages/alugarProdutos.html?category=monte">Pegue e
                                             Monte</a></li>
                                 </ul>
                             </li>
@@ -94,7 +96,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Para Comprar</h4>
-                <a href="/pages/comprarProdutos.html" class="btn">Ver mais ></a>
+                <a href="./pages/comprarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
             <div class="products d-flex">
@@ -139,41 +141,53 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Pegue e Monte</h4>
-                <a href="/pages/alugarProdutos.html" class="btn">Ver mais ></a>
+                <a href="./pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
             </div>
 
             <div class="products d-flex">
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/pegue_e_monte/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/mini_kit/barbie_mini_kit.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte | Bobbie Goods
                         </p>
-                        <p class="fw-bold"> R$ 150,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 030</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/pegue_e_monte/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/kit/moana_kit.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte | Bobbie Goods
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 016</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/pegue_e_monte/bobbie_goods_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
+                    <img src="../images/alugar/pegue_e_monte/mini_kit/bobbie_goods_mini_kit.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
+                    <div class="card-body d-flex flex-column justify-content-between">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Mini Kit Pegue e Monte | Bobbie Goods
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 031</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -184,41 +198,53 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Bolos Fake</h4>
-                <a href="/pages/alugarProdutos.html" class="btn">Ver mais ></a>
+                <a href="./pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
             </div>
 
             <div class="products d-flex">
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/barbie_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
+                    <img src="./images/alugar/bolo_fake/bolo_braco_bascio.png"
+                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
                     <div class="card-body">
                         <p class="card-text">
-                            Mini Kit Pegue e Monte CowBoy 
+                            Bolo Fake Branco com Laços Vermelhos
                         </p>
-                        <p class="fw-bold"> R$ 150,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 060</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/moana_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                    <img src="./images/alugar/bolo_fake/bolo_cinderela.png" alt="Pacote Colher Descartável 50 unidades"
                         class="card-img">
                     <div class="card-body">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Bolo Fake | Cinderela
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 059</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/bobbie_goods_mini_kit.png" alt="Pacote Colher Descartável 50 unidades"
+                    <img src="./images/alugar/bolo_fake/bolo_safari.png" alt="Pacote Colher Descartável 50 unidades"
                         class="card-img">
                     <div class="card-body">
                         <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
+                            Bolo Fake | Safari
                         </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
+                        <div class="d-flex justify-content-between">
+                            <p class="fw-bold"> R$ 50,00 </p>
+
+                            <p class="fw-semibold">CÓDIGO: 061</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -229,9 +255,11 @@
 
 
     <footer class="medium-background" style="min-height: 3rem">
-        
+
     </footer>
 
+
+    <script src="./js/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
