--- a/pages/decoracao.html
+++ b/pages/decoracao.html
@@ -15,10 +15,15 @@
 </head>
 
 <body>
-    <header class="d-flex justify-content-between padding-container light-background">
+    <header class="d-flex justify-content-between padding-container light-background shadow-sm">
         <!-- RECORTAR AS LATERAIS DA LOGO PRA HEADER FICAR CORRETA -->
         <img src="../images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
         <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
+        <div class="right-side d-flex align-items-center">
+            <a href="./pages/carrinhoCompras.html">
+                <i class="fa-solid fa-cart-shopping medium-color fs-5"></i>
+            </a>
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -65,6 +70,7 @@
                 </div>
             </div>
         </nav>
+        </div>
     </header>
     <section class="padding-container text-center soft-background pt-3 pb-3">
         <p>Aqui estão as decorações que já fizemos
@@ -85,6 +91,7 @@
 
     </footer>
 
+    <script src="../js/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
