Ao clicar em 'Finalizar compra', redireciona ao whatsapp

--- a/pages/alugarProdutos.html
+++ b/pages/alugarProdutos.html
@@ -91,7 +91,7 @@
             Você também pode comprar e alugar Bolos Fakes personalizados
         </p>
         <p>Deseja alugar algo diferente do catálogo? Bolo Fake personalizado? fale conosco!</p>
-        <button class="btn text-white px-md-4 request-button">
+        <button class="btn text-white px-md-4 whatsapp-button">
             <i class="fa-brands fa-whatsapp"></i>
             <p>Faça seu pedido</p>
         </button>
