--- a/pages/comprarProdutos.html
+++ b/pages/comprarProdutos.html
@@ -80,7 +80,7 @@
             você pode comprar produtos para sua festa!
         </p>
         <p>Deseja pedir um orçamento? Nos chame no Whatsapp!</p>
-        <button class="btn text-white px-md-4 request-button">
+        <button class="btn text-white px-md-4 whatsapp-button">
             <i class="fa-brands fa-whatsapp"></i>
             <p>Faça seu pedido</p>
         </button>
