--- a/pages/decoracao.html
+++ b/pages/decoracao.html
@@ -79,7 +79,7 @@
             Montamos decorações completas, com painéis, balões, arcos, tapetes e muito mais.
         </p>
         <p class="fs-5">Você pede, nós montamos!</p>
-        <button class="btn text-white px-md-4 request-button">
+        <button class="btn text-white px-md-4 whatsapp-button">
             <i class="fa-brands fa-whatsapp"></i>
             <p>Faça seu pedido</p>
         </button>
