Reutilização de cards

--- a/pages/alugarProdutos.html
+++ b/pages/alugarProdutos.html
@@ -141,93 +141,25 @@
         </div>
 
         <!-- CACHEPO -->
-        <section class="produts d-flex" id="cachepo"></section>
+        <section class="products d-flex hidden" id="cachepo"></section>
 
         <!-- PEGUE E MONTE KIT-->
-        <section class="products d-flex " id="normalKits">
-
-
-            <div class="card dmaria-card buy-product">
-                <img src="../images/alugar/pegue_e_monte/kit/animais_marinhos_kit.png"
-                    alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <p class="card-text">
-                        Kit Pegue e Monte | Fundo do Mar
-                    </p>
-                    <div class="d-flex justify-content-between">
-                        <p class="fw-bold"> R$ 50,00 </p>
-
-                        <p class="fw-semibold">CÓDIGO: 001</p>
-                    </div>
-                    <button class="btn bg-primary w-50 align-self-center"
-                        data-img="/images/alugar/pegue_e_monte/kit/animais_marinhos_kit.png"
-                        data-name="Kit Pegue e Monte | Fundo do Mar" data-price="50.00" data-cod="CÓDIGO: 001"
-                        onclick="addShoppingCar(this)">
-                        Adicionar</button>
-                </div>
-            </div>
-
-
-        </section>
+        <section class="products d-flex" id="normalKits"></section>
 
         <!-- PEGUE E MONTE MINI KIT -->
-        <section class="products d-flex border hidden" id="miniKits">
-
-            <div class="card dmaria-card buy-product">
-                <img src="../images/alugar/pegue_e_monte/mini_kit/abc_mini_kit.png"
-                    alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <p class="card-text">
-                        Mini Kit Pegue e Monte | Bobbie Goods
-                    </p>
-                    <div class="d-flex justify-content-between">
-                        <p class="fw-bold"> R$ 50,00 </p>
-
-                        <p class="fw-semibold">CÓDIGO: 026</p>
-                    </div>
-                    <button class="btn bg-primary w-50 align-self-center"
-                        data-img="/images/alugar/pegue_e_monte/mini_kit/abc_mini_kit.png"
-                        data-name="Mini Kit | ABC" data-price="25.00" data-cod="CÓDIGO: 026"
-                        onclick="addShoppingCar(this)">
-                        Adicionar</button>
-                </div>
-            </div>
-
-        </section>
+        <section class="products d-flex hidden" id="miniKits"></section>
 
         <!-- MESAS -->
-        <section class="produts d-flex" id="mesa"></section>
+        <section class="products d-flex hidden" id="mesa"></section>
 
         <!-- PAINEIS -->
-        <section class="produts d-flex" id="painel"></section>
+        <section class="products d-flex hidden" id="painel"></section>
 
         <!-- TAPETES -->
-        <section class="produts d-flex" id="tapete"></section>
+        <section class="products d-flex hidden" id="tapete"></section>
 
         <!-- BOLO FAKE -->
-        <section class="products d-flex hidden" id="boloFake">
-
-            <div class="card dmaria-card buy-product">
-                <img src="../images/alugar/bolo_fake/bolo_cinderela.png" alt="Pacote Colher Descartável 50 unidades"
-                    class="card-img">
-                <div class="card-body d-flex flex-column justify-content-between">
-                    <p class="card-text">
-                        Bolo Fake | Cinderela
-                    </p>
-                    <div class="d-flex justify-content-between">
-                        <p class="fw-bold"> R$ 50,00 </p>
-
-                        <p class="fw-semibold">CÓDIGO: 059</p>
-                    </div>
-                    <button class="btn bg-primary w-50 align-self-center"
-                        data-img="/images/alugar/bolo_fake/bolo_cinderela.png"
-                        data-name="Bolo Cinderela" data-price="150.30" data-cod="CÓDIGO: 059"
-                        onclick="addShoppingCar(this)">
-                        Adicionar</button>
-                </div>
-            </div>
-
-        </section>
+        <section class="products d-flex hidden" id="boloFake"></section>
 
 
 
@@ -241,6 +173,8 @@
 
 
     <script src="../js/main.js"></script>
+
+    <script src="../js/templates.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
