--- a/index.html
+++ b/index.html
@@ -103,41 +103,7 @@
                 <a href="./pages/comprarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
-            <div class="products d-flex">
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
-                        </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
-                        </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/comprar/colherDescartavel.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Pacote de Colher Descartável marca TAL 50 unidades
-                        </p>
-                        <p class="fw-bold"> R$ 50,00 </p>
-                    </div>
-                </div>
-            </div>
+            <div class="products d-flex" id="comprarProdutos"></div>
 
         </section>
 
@@ -148,53 +114,7 @@
                 <a href="./pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
             </div>
 
-            <div class="products d-flex">
-
-                <div class="card dmaria-card buy-product">
-                    <img src="../images/alugar/pegue_e_monte/mini_kit/barbie_mini_kit.png"
-                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                    <div class="card-body d-flex flex-column justify-content-between">
-                        <p class="card-text">
-                            Mini Kit Pegue e Monte | Bobbie Goods
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 030</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="../images/alugar/pegue_e_monte/kit/moana_kit.png"
-                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                    <div class="card-body d-flex flex-column justify-content-between">
-                        <p class="card-text">
-                            Mini Kit Pegue e Monte | Bobbie Goods
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 016</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="../images/alugar/pegue_e_monte/mini_kit/bobbie_goods_mini_kit.png"
-                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                    <div class="card-body d-flex flex-column justify-content-between">
-                        <p class="card-text">
-                            Mini Kit Pegue e Monte | Bobbie Goods
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 031</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="products d-flex" id="normalKits"></div>
 
         </section>
 
@@ -205,53 +125,7 @@
                 <a href="./pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
             </div>
 
-            <div class="products d-flex">
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/bolo_fake/bolo_braco_bascio.png"
-                        alt="Pacote Colher Descartável 50 unidades" class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Bolo Fake Branco com Laços Vermelhos
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 060</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/bolo_fake/bolo_cinderela.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Bolo Fake | Cinderela
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 059</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card dmaria-card buy-product">
-                    <img src="./images/alugar/bolo_fake/bolo_safari.png" alt="Pacote Colher Descartável 50 unidades"
-                        class="card-img">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Bolo Fake | Safari
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <p class="fw-bold"> R$ 50,00 </p>
-
-                            <p class="fw-semibold">CÓDIGO: 061</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="products d-flex" id="boloFake"></div>
 
         </section>
 
@@ -264,6 +138,8 @@
 
 
     <script src="./js/main.js"></script>
+
+    <script src="./js/templates.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
