adicionado uma base na Head

--- a/pages/carrinhoCompras.html
+++ b/pages/carrinhoCompras.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
+    <base href="/dmaria/">
 
     <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
