--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
     
-    <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="./images/dmarialogo-removebg.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
@@ -36,7 +36,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Para Comprar</h4>
-                <a href="/pages/comprarProdutos.html" class="btn">Ver mais ></a>
+                <a href="./pages/comprarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="comprarProdutos"></div>
@@ -47,7 +47,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Pegue e Monte</h4>
-                <a href="/pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
+                <a href="./pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="normalKits"></div>
@@ -58,7 +58,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Bolos Fake</h4>
-                <a href="/pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
+                <a href="./pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="boloFake"></div>
@@ -73,9 +73,9 @@
     </footer>
 
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 
-    <script src="/js/templates.js"></script>
+    <script src="./js/templates.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
