--- a/pages/carrinhoCompras.html
+++ b/pages/carrinhoCompras.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
 
-    <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="../images/dmarialogo-removebg.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -53,11 +53,11 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <script src="/js/carrinho.js"></script>
+    <script src="../js/carrinho.js"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="../js/main.js"></script>
 
-    <script src="/js/templates.js"></script>
+    <script src="../js/templates.js"></script>
 </body>
 
 </html>
